--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "darryldecode/cart": "^4.1",
+        "barryvdh/laravel-dompdf": "^0.8.5",
+        "bumbummen99/shoppingcart": "^2.8",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
